src/objects/CostDistLine__c.object
<CustomObject>
    <fields>
        <fullName>DENOMBurdenedCost__c</fullName>
        <label>DENOM Burdened Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DENOMCurrencyCode__c</fullName>
        <label>DENOM Currency Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DENOMRawCost__c</fullName>
        <label>DENOM Raw Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpenditureItem__c</fullName>
        <label>Expenditure Item</label>
        <referenceTo>ExpendItem__c</referenceTo>
        <relationshipLabel>Cost Distribution Lines (Expenditure Items)</relationshipLabel>
        <relationshipName>CostDistributionLinesExpenditureItem</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GLDate__c</fullName>
        <label>GL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GLFiscalMonth__c</fullName>
        <label>GL Fiscal Month</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GLPeriodName__c</fullName>
        <label>GL Period Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OracleSyncError__c</fullName>
        <label>Oracle Sync Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OracleSyncStatus__c</fullName>
        <description>P = Pending 
T = Transfer (Success) 
E = Error 
S = Successful</description>
        <inlineHelpText>P = Pending 
T = Transfer (Success) 
E = Error 
S = Successful</inlineHelpText>
        <label>Oracle Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PADate__c</fullName>
        <label>PA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PAFiscalMonth__c</fullName>
        <label>PA Fiscal Month</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAPeriodName__c</fullName>
        <label>PA Period Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLReportCategory__c</fullName>
        <formula>ExpenditureItem__r.PLReportCategory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PLReportCategory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectBurdenedCost__c</fullName>
        <label>Project Burdened Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectCurrencyCode__c</fullName>
        <label>Project Currency Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalBurdenedCost__c</fullName>
        <label>Project Functional Burdened Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalCurrencyCode__c</fullName>
        <label>Project Functional Currency Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectFunctionalRawCost__c</fullName>
        <label>Project Functional Raw Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <formula>CASESAFEID(ExpenditureItem__r.ProjectTask__r.pse__Project__r.Id)</formula>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectRawCost__c</fullName>
        <label>Project Raw Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaskNumber__c</fullName>
        <formula>CASESAFEID(ExpenditureItem__r.ProjectTask__r.Id)</formula>
        <label>Task Number</label>
        <type>Text</type>
    </fields>
    <label>Cost Distribution Line</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Dist-{0}</displayFormat>
        <label>Cost Distribution Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Distribution Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>